--- a/docs/manual/source/03_auth/index.tex
+++ b/docs/manual/source/03_auth/index.tex
@@ -1,3 +1,66 @@
 \chapter{Авторизация}
-\label{sec:auth}
+    \label{sec:auth}
+    
+    Через процедуру авторизации проходит любой пользователь, желающий получить 
+    доступ к дополнительным функциям, к которым не имеет доступа пользователь группы
+    \\\gloss{nonauth_user}. Через неё не проходит только пользователь \\\gloss{admin}.
+    
+    Авторизация посетителя магазина основана на кроссдоменной передаче сессии от \gloss{AG}.
+
+    \section{Общее в процедуре авторизации(кроссдоменная авторизация)}
+    \label{sec:auth_common}
+    
+        \begin{enumerate}
+            \item Пользователь магазина может быть авторизован только если он авторизован на \gloss{AG}.
+            \item Если посетитель не авторизован в магазине, то на его странице особым образом формируется 
+                ссылка на страницу \gloss{AG}, выводящую информацию об \gloss{AGSESSIONID} в зашифрованном виде.
+            \item Расшифровав \gloss{AGSESSIONID}, магазин получает \gloss{AGPROFILE} у \gloss{AGAPI}.
+            \item Далее, в зависимости от того, заходил ли посетитель в \gloss{shop} ранее, 
+                происходит первичная(см.\ref{sec:auth_first}) или вторичная(см.\ref{sec:auth_second}) авторизация
+        \end{enumerate}
+    
+    \section{Первичная авторизация пользователя}
+    \label{sec:auth_first}
+
+        \begin{enumerate}
+            \item Производится если существующий пользователь \gloss{AG} впервые зашел в \gloss{shop}.
+            \item После того как \gloss{shop} получит \gloss{AGPROFILE} (см. \ref{sec:auth_common}), через \gloss{BXAPI} создаётся \gloss{BXUSER}
+            \item В качестве логина для него используется телефон, на который зарегистрирован \gloss{AGPROFILE}.
+            \item Пароль задаётся случайно(так как сам по себе \gloss{BXUSER} не преднозначен для самостоятельной авторизации в \gloss{shop})
+            \item Далее посетитель автоматически авторизуется на \gloss{shop} и продолжает работу как \gloss{auth_user}
+        \end{enumerate}
+    
+    
+    \section{Вторичная авторизация пользователя}
+    \label{sec:auth_second}
+        \begin{enumerate}
+            \item Производится если существующий пользователь \gloss{AG} повторно зашел в \gloss{shop}, и не авторизован в нем как \gloss{BXUSER}.
+            \item После того как \gloss{shop} получит \gloss{AGPROFILE} (см. \ref{sec:auth_common}), 
+                через \gloss{BXAPI} ищется \gloss{BXUSER} с таким же номером телефона.
+            \item Далее посетитель автоматически авторизуется на \gloss{shop} и продолжает работу как \gloss{auth_user}
+        \end{enumerate}
+    
+    
+    \section{Получение истории баллов}
+    \label{sec:get_points_history}
+    \begin{enumerate}
+        \item Для принятия решения о возможности совершения покупки в \gloss{shop} 
+            необходимо получить информацию о количестве баллов у пользователя \gloss{AG}
+        \item История баллов после авторизации получается с помощью \gloss{AGAPI} в виде списка объектов типа
+            \gloss{AGTRANSACT} и оформления их в виде объектов типа \gloss{BXTRANSACT}
+        \item Затем баланс баллов, полученных из \gloss{AG} используется в процессе овормления заказов \gloss{shop}
+    \end{enumerate}
+
+    
+    \section{Получение заказов}
+    \begin{enumerate}
+        \item Для отслеживания состояния заказов объекты типа \gloss{BXORDER} синхронизируются с \gloss{UNF} посредством 
+            процесса \gloss{exchange1c}.
+        \item Центральным хранилищем информации о заказах является \gloss{UNF}, а \gloss{shop} является как бы дополнительным web-интерфейсом к нему
+    \end{enumerate}
+
+    
+    
+    
+    
 
